care/force-app/main/default/objects/Marketing_Solutions_Account_Mapping__mdt/Marketing_Solutions_Account_Mapping__mdt.object-meta.xml
<CustomObject>
    <description>Maps values received from Galore to values expected in Salesforce</description>
    <label>Marketing Solutions Account Mapping</label>
    <pluralLabel>Marketing Solutions Account Mappings</pluralLabel>
</CustomObject>