care/force-app/main/default/objects/Marketing_Solutions_Account_Mapping__mdt/fields/Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_API_Name__c</fullName>
    <description>The API Name of the Salesforce field</description>
    <label>Salesforce Field API Name</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Primary_Vertical__c</fullName>
                <default>true</default>
                <label>Primary_Vertical__c</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>