care/force-app/main/default/objects/Marketing_Solutions_Account_Mapping__mdt/fields/Incoming_Value__c.field-meta.xml
<CustomField>
    <fullName>Incoming_Value__c</fullName>
    <description>The value that is received through the API</description>
    <label>Incoming Value</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>