care/force-app/main/default/objects/Marketing_Solutions_Account_Mapping__mdt/fields/Salesforce_Value__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Value__c</fullName>
    <description>The value to set as the field value in Salesforce</description>
    <label>Salesforce Value</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>