care/force-app/main/default/objects/Marketing_Solutions_Account_Mapping__mdt/listViews/View_All_data.listView-meta.xml
<ListView>
    <fullName>View_All_data</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>IsProtected</columns>
    <columns>Incoming_Value__c</columns>
    <columns>Field_API_Name__c</columns>
    <columns>Salesforce_Value__c</columns>
    <filterScope>Everything</filterScope>
    <label>View All data</label>
    <language>en_US</language>
</ListView>